// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs ToastContainer should match the snapshot 1`] = `
.c0 {
  -webkit-align-content: "center";
  -ms-flex-line-pack: "center";
  align-content: "center";
  background: #fff1f0;
  border: 0.0625rem solid #ffa39e;
  box-sizing: border-box;
  border-radius: 0.25rem;
  position: fixed;
  display: block;
  max-width: 100%;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  text-align: center;
  font-style: normal;
  font-weight: normal;
  font-size: 0.875rem;
  line-height: 1.375rem;
  top: 20px;
  -webkit-animation: hJpKb 0.3s forwards;
  animation: hJpKb 0.3s forwards;
  padding: 0.5625rem 1rem;
  visibility: visible;
  -webkit-transition: visibility 0.3s linear;
  transition: visibility 0.3s linear;
}

<ToastContainer
  align="middle"
  position="fixed"
  top="20px"
  type="error"
  visible={true}
>
  <StyledComponent
    align="middle"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Toast__ToastContainer-y5ikly-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "align-content:\\"center\\";background:#fff1f0;border:0.0625rem solid #ffa39e;box-sizing:border-box;border-radius:0.25rem;position:",
            [Function],
            ";display:block;max-width:100%;left:50%;transform:translateX(-50%);text-align:center;font-style:normal;font-weight:normal;font-size:0.875rem;line-height:1.375rem;top:",
            [Function],
            ";animation:",
            [Function],
            " 0.3s forwards;padding:0.5625rem 1rem;visibility:",
            [Function],
            ";transition:visibility 0.3s linear;",
          ],
        },
        "displayName": "ToastContainer",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Toast__ToastContainer-y5ikly-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    position="fixed"
    top="20px"
    type="error"
    visible={true}
  >
    <div
      className="c0"
      type="error"
    >
      <button
        className="selected"
        type="button"
      >
        tab
      </button>
    </div>
  </StyledComponent>
</ToastContainer>
`;

exports[`Tabs ToastContainer should match the snapshot default props 1`] = `
.c0 {
  -webkit-align-content: "center";
  -ms-flex-line-pack: "center";
  align-content: "center";
  background: #fff1f0;
  border: 0.0625rem solid #ffa39e;
  box-sizing: border-box;
  border-radius: 0.25rem;
  position: absolute;
  display: block;
  max-width: 100%;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  text-align: center;
  font-style: normal;
  font-weight: normal;
  font-size: 0.875rem;
  line-height: 1.375rem;
  top: 0.625rem;
  -webkit-animation: hJpKb 0.3s forwards;
  animation: hJpKb 0.3s forwards;
  padding: 0.5625rem 1rem;
  visibility: visible;
  -webkit-transition: visibility 0.3s linear;
  transition: visibility 0.3s linear;
}

<ToastContainer
  align="middle"
  type="error"
  visible={true}
>
  <StyledComponent
    align="middle"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Toast__ToastContainer-y5ikly-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "align-content:\\"center\\";background:#fff1f0;border:0.0625rem solid #ffa39e;box-sizing:border-box;border-radius:0.25rem;position:",
            [Function],
            ";display:block;max-width:100%;left:50%;transform:translateX(-50%);text-align:center;font-style:normal;font-weight:normal;font-size:0.875rem;line-height:1.375rem;top:",
            [Function],
            ";animation:",
            [Function],
            " 0.3s forwards;padding:0.5625rem 1rem;visibility:",
            [Function],
            ";transition:visibility 0.3s linear;",
          ],
        },
        "displayName": "ToastContainer",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Toast__ToastContainer-y5ikly-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    type="error"
    visible={true}
  >
    <div
      className="c0"
      type="error"
    >
      <button
        className="selected"
        type="button"
      >
        tab
      </button>
    </div>
  </StyledComponent>
</ToastContainer>
`;

exports[`Tabs ToastContainer should match the snapshot not visible 1`] = `
.c0 {
  -webkit-align-content: "center";
  -ms-flex-line-pack: "center";
  align-content: "center";
  background: #fff1f0;
  border: 0.0625rem solid #ffa39e;
  box-sizing: border-box;
  border-radius: 0.25rem;
  position: fixed;
  display: block;
  max-width: 100%;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  text-align: center;
  font-style: normal;
  font-weight: normal;
  font-size: 0.875rem;
  line-height: 1.375rem;
  top: 20px;
  -webkit-animation: dWXVzx 0.3s forwards;
  animation: dWXVzx 0.3s forwards;
  padding: 0.5625rem 1rem;
  visibility: hidden;
  -webkit-transition: visibility 0.3s linear;
  transition: visibility 0.3s linear;
}

<ToastContainer
  align="middle"
  position="fixed"
  top="20px"
  type="error"
  visible={false}
>
  <StyledComponent
    align="middle"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Toast__ToastContainer-y5ikly-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "align-content:\\"center\\";background:#fff1f0;border:0.0625rem solid #ffa39e;box-sizing:border-box;border-radius:0.25rem;position:",
            [Function],
            ";display:block;max-width:100%;left:50%;transform:translateX(-50%);text-align:center;font-style:normal;font-weight:normal;font-size:0.875rem;line-height:1.375rem;top:",
            [Function],
            ";animation:",
            [Function],
            " 0.3s forwards;padding:0.5625rem 1rem;visibility:",
            [Function],
            ";transition:visibility 0.3s linear;",
          ],
        },
        "displayName": "ToastContainer",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Toast__ToastContainer-y5ikly-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    position="fixed"
    top="20px"
    type="error"
    visible={false}
  >
    <div
      className="c0"
      type="error"
    >
      <button
        className="selected"
        type="button"
      >
        tab
      </button>
    </div>
  </StyledComponent>
</ToastContainer>
`;

exports[`Tabs should match the snapshot 1`] = `
<ToastContainer
  align="middle"
  position="fixed"
  top="20px"
  type="error"
  visible={true}
>
  <div>
    test
  </div>
</ToastContainer>
`;

exports[`Tabs should match the snapshot for default props 1`] = `
<ToastContainer
  align="middle"
  type="error"
  visible={true}
>
  <div>
    test
  </div>
</ToastContainer>
`;

exports[`Tabs should match the snapshot not visible 1`] = `
<ToastContainer
  align="middle"
  position="fixed"
  top="20px"
  type="error"
  visible={false}
>
  <div>
    test
  </div>
</ToastContainer>
`;
